--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&display=swap");
+
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+*::-webkit-scrollbar {
+  display: none;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
+  background-color: #262a41;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,17 +19,71 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  border-radius: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dots-left {
+  position: absolute;
+  height: 20vh;
+  top: 18%;
+  left: 0%;
+}
+
+.dots-bottom {
+  position: absolute;
+  bottom: -0.5%;
+  width: 20vw;
+  left: 20%;
+}
+.dots-right {
+  position: absolute;
+  right: 0%;
+  height: 10vh;
+  transform: rotate(-1deg);
+}
+.dots-top {
+  position: absolute;
+  top: 0%;
+  height: 10vh;
+  right: 35%;
+}
+.app-menu-icon-wrapper {
+  transition: all 1s ease-in-out;
+}
+
+.app-menu-icon-wrapper :hover {
+  transform: scale(1.1);
+}
+
+.app-menu-icon {
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  background: #3c3f54;
+  width: 35px;
+  height: 35px;
+  top: 25px;
+  left: 33px;
+  border-radius: 10px;
+}
+
+.App-title {
+  position: absolute;
+  width: 100px;
+  height: 49px;
+  left: 85px;
+  top: 20px;
+  font-family: "Montserrat Alternates", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 49px;
+  letter-spacing: 0.1em;
+  color: #5a5d6f;
 }
