--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,15 @@
   transform: scale(1.1);
 }
 
+span {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .app-menu-icon {
   position: absolute;
   align-items: center;
