--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,6 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
   border-radius: 20px;
@@ -95,4 +93,8 @@ span {
   line-height: 49px;
   letter-spacing: 0.1em;
   color: #5a5d6f;
+}
+
+.App-title:hover {
+  color: white;
 }
